working on layout and layers of page

--- a/index.html
+++ b/index.html
@@ -17,23 +17,87 @@
     <link rel="stylesheet" href="style.css" />
     <title>ICON- JAMES BROWN</title>
   </head>
-  <body class="gradient-background">
+  <body>
+    <div class="gradient-background"></div>
+    <div class="background-img"></div>
     <div class="overlay">
+      <h2>Get up off that thang!</h2>
+
       <h1>James Brown</h1>
+      <h3>
+        <a href="#">"the Hardest-Working Man in Show Business"</a> |
+        <a href="#">"Godfather of Soul"</a> | <a href="#">"Mr. Dynamite"</a> |
+        <a href="#">"Soul Brother No. 1"</a>
+      </h3>
+      <p>
+        Brown began his career as a gospel singer in Toccoa, Georgia.[3] He rose
+        to prominence in the mid-1950s as the lead singer of the Famous Flames,
+        a rhythm and blues vocal group founded by Bobby Byrd.[4][5] With the hit
+        ballads "Please, Please, Please" and "Try Me", Brown built a reputation
+        as a dynamic live performer with the Famous Flames and his backing band,
+        sometimes known as the James Brown Band or the James Brown Orchestra.
+        His success peaked in the 1960s with the live album Live at the Apollo
+        and hit singles such as "Papa's Got a Brand New Bag", "I Got You (I Feel
+        Good)" and "It's a Man's Man's Man's World". During the late 1960s,
+        Brown moved from a continuum of blues and gospel-based forms and styles
+        to a new approach to music-making, emphasizing stripped-down
+        interlocking rhythms that influenced the development of funk music.[6]
+        By the early 1970s, Brown had fully established the funk sound after the
+        formation of the J.B.s with records such as "Get Up (I Feel Like Being
+        a) Sex Machine" and "The Payback". He also became noted for songs of
+        social commentary, including the 1968 hit "Say It Loud – I'm Black and
+        I'm Proud". Brown continued to perform and record until his death from
+        pneumonia in 2006.
+      </p>
+      <div class="container">
+        <iframe
+          src="https://giphy.com/embed/WmXaVcRMhvTiM7fTCZ"
+          width="250"
+          height="200"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          src="https://giphy.com/embed/YMqJoO4rLvWz1QpOYb"
+          width="250"
+          height="200"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          src="https://giphy.com/embed/QADiT4XdYv18QDYfCm"
+          width="250"
+          height="200"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          src="https://giphy.com/embed/YlG76gpCXhKHAGIsJD"
+          width="250"
+          height="200"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+        ></iframe>
+      </div>
+
+      <footer>
+        coded by
+        <a
+          href="https://github.com/VALA9GALA/ICON--james-brown"
+          target="_blank"
+          rel="noreferrer noopener"
+          ><img
+            class="valagala"
+            src="http://www.gigaglitters.com/created/W9mSKlbFxe.gif"
+            width="150"
+            height="33"
+            alt="http://www.rasaint.net/ - Glitter Graphics"
+        /></a>
+      </footer>
     </div>
-    <footer>
-      coded by
-      <a
-        href="https://github.com/VALA9GALA/ICON--james-brown"
-        target="_blank"
-        rel="noreferrer noopener"
-        ><img
-          src="http://www.gigaglitters.com/created/W9mSKlbFxe.gif"
-          width="190"
-          height="53"
-          border="0"
-          alt="http://www.rasaint.net/ - Glitter Graphics"
-      /></a>
-    </footer>
   </body>
 </html>
