--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="Screenshot 2024-04-21 221203.png"
       type="image/x-icon"
     />
+    <script
+      src="https://kit.fontawesome.com/c09fcaf3a9.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;900&family=Lobster&display=swap"
       rel="stylesheet"
@@ -17,7 +21,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>ICON- JAMES BROWN</title>
   </head>
-  <body>
+  <body id="top">
     <div class="gradient-background"></div>
     <div class="background-img"></div>
     <div class="overlay">
@@ -25,31 +29,60 @@
 
       <h1>James Brown</h1>
       <h3>
-        <a href="#">"the Hardest-Working Man in Show Business"</a> |
-        <a href="#">"Godfather of Soul"</a> | <a href="#">"Mr. Dynamite"</a> |
-        <a href="#">"Soul Brother No. 1"</a>
+        <a href="#gif-gal">Hardest-Working Man in Show Business</a> |
+        <a href="#godfather">Godfather of Soul</a> |
+        <a href="#dynamite">Mr. Dynamite</a> |
+        <a href="#soul-brother">Soul Brother No. 1</a>
       </h3>
-      <p>
-        Brown began his career as a gospel singer in Toccoa, Georgia.[3] He rose
-        to prominence in the mid-1950s as the lead singer of the Famous Flames,
-        a rhythm and blues vocal group founded by Bobby Byrd.[4][5] With the hit
-        ballads "Please, Please, Please" and "Try Me", Brown built a reputation
-        as a dynamic live performer with the Famous Flames and his backing band,
+      <p id="godfather">
+        <span class="brown">Brown</span>
+        <br />
+        began his career as a gospel singer in Toccoa, Georgia. He rose to
+        prominence in the mid-1950s as the lead singer of the Famous Flames, a
+        rhythm and blues vocal group founded by Bobby Byrd. With the hit ballads
+        "Please, Please, Please" and "Try Me", Brown built a reputation as a
+        dynamic live performer with the Famous Flames and his backing band,
         sometimes known as the James Brown Band or the James Brown Orchestra.
         His success peaked in the 1960s with the live album Live at the Apollo
         and hit singles such as "Papa's Got a Brand New Bag", "I Got You (I Feel
         Good)" and "It's a Man's Man's Man's World". During the late 1960s,
         Brown moved from a continuum of blues and gospel-based forms and styles
         to a new approach to music-making, emphasizing stripped-down
-        interlocking rhythms that influenced the development of funk music.[6]
-        By the early 1970s, Brown had fully established the funk sound after the
+        interlocking rhythms that influenced the development of funk music. By
+        the early 1970s, Brown had fully established the funk sound after the
         formation of the J.B.s with records such as "Get Up (I Feel Like Being
         a) Sex Machine" and "The Payback". He also became noted for songs of
         social commentary, including the 1968 hit "Say It Loud – I'm Black and
         I'm Proud". Brown continued to perform and record until his death from
         pneumonia in 2006.
       </p>
-      <div class="container">
+
+      <span class="james" id="dynamite">James</span>
+      <p class="second-p">
+        Joseph Brown (May 3, 1933 – December 25, 2006) was an American singer,
+        dancer and musician. The central progenitor of funk music and a major
+        figure of 20th-century music, he is referred to by various nicknames,
+        among them "the Hardest-Working Man in Show Business", "Godfather of
+        Soul", "Mr. Dynamite", and "Soul Brother No. 1". In a career that lasted
+        more than 50 years, he influenced the development of several music
+        genres. Brown was one of the first 10 inductees into the Rock and Roll
+        Hall of Fame on January 23, 1986.
+      </p>
+      <span class="brown-two" id="soul-brother">Brown</span>
+      <p class="third-p">
+        recorded and released 17 singles that reached No. 1 on the Billboard R&B
+        charts. He also holds the record for the most singles listed on the
+        Billboard Hot 100 chart that did not reach No. 1. Brown was posthumously
+        inducted into the first class of the Rhythm & Blues Music Hall of Fame
+        in 2013 as an artist and then in 2017 as a songwriter. He received
+        honors from several other institutions, including inductions into the
+        Black Music & Entertainment Walk of Fame and the Songwriters Hall of
+        Fame. In Joel Whitburn's analysis of the Billboard R&B charts from 1942
+        to 2010, Brown is ranked No. 1 in the Top 500 Artists. He is ranked
+        seventh on Rolling Stone's list of the 100 Greatest Artists of All Time
+        and at No. 44 on their list of the 200 Greatest Singers of All Time.
+      </p>
+      <div class="container" id="gif-gal">
         <iframe
           src="https://giphy.com/embed/WmXaVcRMhvTiM7fTCZ"
           width="250"
@@ -97,7 +130,19 @@
             height="33"
             alt="http://www.rasaint.net/ - Glitter Graphics"
         /></a>
+        content from
+        <a
+          href="https://en.wikipedia.org/wiki/James_Brown#"
+          target="_blank"
+          rel="noreferrer noopener"
+          >wikipedia</a
+        >
       </footer>
+    </div>
+    <div class="top-star">
+      <a href="#top">
+        <i class="fa-regular fa-star"></i>
+      </a>
     </div>
   </body>
 </html>
