added spotify embed
more layout work

--- a/index.html
+++ b/index.html
@@ -28,14 +28,28 @@
       <h2>Get up off that thang!</h2>
 
       <h1>James Brown</h1>
-      <h3>
-        <a href="#gif-gal">Hardest-Working Man in Show Business</a> |
-        <a href="#godfather">Godfather of Soul</a> |
-        <a href="#dynamite">Mr. Dynamite</a> |
-        <a href="#soul-brother">Soul Brother No. 1</a>
-      </h3>
-      <p id="godfather">
+      <div>
+        <h3>
+          <a href="#gif-gal">Hardest-Working Man in Show Business</a> |
+          <a href="#godfather">Godfather of Soul</a> |
+          <a href="#dynamite">Mr. Dynamite</a> |
+          <a href="#soul-brother">Soul Brother No. 1</a>
+        </h3>
+      </div>
+      <div class="brown-spotify">
         <span class="brown">Brown</span>
+        <iframe
+          class="spotify"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/37i9dQZF1DZ06evO4y2rNC?utm_source=generator"
+          width="45%"
+          height="152"
+          frameborder="0"
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <p id="godfather">
         <br />
         began his career as a gospel singer in Toccoa, Georgia. He rose to
         prominence in the mid-1950s as the lead singer of the Famous Flames, a
