working on responsiveness
wip

--- a/index.html
+++ b/index.html
@@ -23,19 +23,23 @@
   </head>
   <body id="top">
     <div class="gradient-background"></div>
+
     <div class="background-img"></div>
     <div class="overlay">
-      <div class="icon">icon</div>
-      <h2><em>Get up off that thang!</em></h2>
+      <div class="title">
+        <div class="icon">icon</div>
+        <h2><em>Get up off that thang!</em></h2>
 
-      <h1>James Brown</h1>
-      <div>
-        <h3>
-          <a href="#gif-gal">Hardest-Working Man</a> |
-          <a href="#godfather">Godfather of Soul</a> |
-          <a href="#dynamite">Mr. Dynamite</a> |
-          <a href="#soul-brother">Soul Brother No. 1</a>
-        </h3>
+        <h1>James Brown</h1>
+
+        <div>
+          <h3>
+            <a href="#gif-gal">Hardest-Working Man</a> |
+            <a href="#godfather">Godfather of Soul</a> |
+            <a href="#dynamite">Mr. Dynamite</a> |
+            <a href="#soul-brother">Soul Brother No. 1</a>
+          </h3>
+        </div>
       </div>
       <div class="brown-spotify">
         <span class="brown">Brown</span>
