--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>ICON- JAMES BROWN</title>
   </head>
-  <body id="top">
+  <body>
     <div class="gradient-background"></div>
 
     <div class="background-img"></div>
@@ -106,8 +106,10 @@
         and at No. 44 on their list of the 200 Greatest Singers of All Time.
       </p>
 
-      <h4 class="hardest-working">Hardest Working Man in Show Business</h4>
-      <div class="container" id="gif-gal">
+      <h4 class="hardest-working" id="gif-gal">
+        Hardest Working Man in Show Business
+      </h4>
+      <div class="container">
         <iframe
           src="https://giphy.com/embed/WmXaVcRMhvTiM7fTCZ"
           width="250"
