--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="shortcut icon"
-      href="Screenshot 2024-04-21 221203.png"
+      href="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/124/514/original/Screenshot_2024-04-21_221203.png?1714107948"
       type="image/x-icon"
     />
     <script
@@ -18,7 +18,531 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;900&family=Lobster&family=Limelight&family=Monoton&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <style>
+      html {
+        scrollbar-color: #9445be #d4b0ec;
+      }
+      body {
+        background: linear-gradient(254deg, #dbbe49, #a342e4);
+        background-size: 120% 120%;
+
+        animation: gradient-animation 8s ease infinite;
+      }
+      .gradient-background {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        background: linear-gradient(254deg, #dbbe49, #a342e4);
+        background-size: 120% 120%;
+
+        animation: gradient-animation 12s ease infinite;
+      }
+
+      @keyframes gradient-animation {
+        0% {
+          background-position: 0% 50%;
+        }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
+      }
+      .background-img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/124/513/original/SF_101_How-James-Brown-Invented-Funk_PBSLearning_THUMB.png?1714107933");
+        filter: drop-shadow(30px 10px 4px #8b43b1e6);
+        background-size: 90%;
+        background-repeat: no-repeat;
+      }
+      .overlay {
+        width: 100%;
+        position: absolute;
+        margin-top: 960px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 2;
+        overflow-y: hidden;
+      }
+      h2 {
+        animation: glitter 3s alternate-reverse infinite,
+          outer-left 2s 1s cubic-bezier(0.5, 0, 0.1, 1) both;
+        text-align: end;
+        margin-right: 100px;
+        font-family: Poppins;
+        font-weight: 700;
+        color: rgb(218, 204, 166);
+        text-shadow: 2px 5px rgb(33, 40, 40);
+        font-size: 33px;
+        letter-spacing: 3px;
+      }
+      @keyframes outer-left {
+        from {
+          transform: translateX(50%);
+        }
+        to {
+          transform: none;
+        }
+      }
+      .icon {
+        margin-top: 100px;
+        margin-left: 100px;
+        color: #d4b0ec;
+        font-family: Monoton;
+        font-size: 85px;
+        letter-spacing: 6px;
+        animation: glitter 3s alternate-reverse infinite,
+          inner-left 2s 1s ease both,
+          text-clip 1s 0s cubic-bezier(0.5, 0, 0.1, 1) both;
+      }
+      h1 {
+        font-family: Lobster;
+        font-size: 160px;
+        color: rgb(182, 137, 25);
+        letter-spacing: 6px;
+        margin-top: -20px;
+        margin-left: 20px;
+        padding: 20px;
+        animation: glitter 3s alternate-reverse infinite,
+          inner-left 2s 1s ease both,
+          text-clip 1s 0s cubic-bezier(0.5, 0, 0.1, 1) both;
+      }
+
+      @keyframes glitter {
+        0% {
+          text-shadow: 0 0 1px darkslategray, 0 0 4px darkslategray;
+        }
+
+        50% {
+          text-shadow: 0 0 4px darkslategray, 0 0 8px darkslategray;
+        }
+        100% {
+          text-shadow: 0 0 20px rgb(241, 187, 48), 0 0 16px rgb(241, 187, 48);
+        }
+      }
+      @keyframes inner-left {
+        from {
+          transform: translateX(-110%);
+        }
+        to {
+          transform: none;
+        }
+      }
+      @keyframes text-clip {
+        from {
+          clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
+        }
+        to {
+          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        }
+      }
+      h3 {
+        color: darkslategray;
+        text-shadow: 1px 2px rgb(40, 57, 57);
+        font-family: Poppins;
+        font-weight: 700;
+        text-align: center;
+        margin-top: -120px;
+        margin-bottom: -200px;
+        letter-spacing: 1px;
+      }
+      h3 a {
+        text-decoration: none;
+        color: rgb(218, 204, 166);
+        margin-right: 10px;
+        margin-left: 10px;
+      }
+      h3 a:hover {
+        color: rgb(151, 116, 29);
+      }
+      .brown-spotify {
+        margin-top: 320px;
+      }
+
+      .spotify {
+        margin-left: 80px;
+      }
+      p {
+        padding: 40px 70px;
+        text-align: justify;
+        font-family: Poppins;
+        font-weight: 700;
+        color: darkslategray;
+        line-height: 2;
+        margin-left: 60px;
+        opacity: 0;
+        transform: translateY(30%);
+        transition: all 2s ease-out;
+      }
+
+      .active {
+        opacity: 4;
+        transform: translateY(0);
+      }
+
+      .brown {
+        margin-left: 80px;
+        font-family: Lobster;
+        color: rgb(218, 204, 166);
+        font-size: 90px;
+        letter-spacing: 50px;
+        text-shadow: 3px 6px rgb(40, 57, 57);
+      }
+      .james {
+        display: block;
+        text-align: center;
+        font-family: Lobster;
+        color: rgb(218, 204, 166);
+        font-size: 90px;
+        letter-spacing: 180px;
+        text-shadow: 3px 6px rgb(40, 57, 57);
+      }
+      .second-p {
+        margin-left: 0px;
+      }
+      .brown-two {
+        display: block;
+        text-align: right;
+        font-family: Lobster;
+        color: rgb(218, 204, 166);
+        font-size: 90px;
+        letter-spacing: 50px;
+        text-shadow: 3px 6px rgb(40, 57, 57);
+      }
+      .third-p {
+        margin-right: 0px;
+      }
+      .hardest-working {
+        text-align: center;
+        font-size: 26px;
+        font-family: Monoton;
+        color: rgb(218, 204, 166);
+        letter-spacing: 4px;
+        text-shadow: 1px 2px rgb(40, 57, 57);
+        animation: glitter 3s alternate-reverse infinite;
+      }
+      .container {
+        display: grid;
+        width: 100%;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+      }
+      .giphy-embed {
+        margin-left: auto;
+        margin-right: auto;
+        border: 18px groove darkgoldenrod;
+        border-radius: 8px;
+        background-color: rgb(218, 204, 166);
+        box-shadow: 2px 6px 8px rgba(47, 79, 79, 0.6);
+      }
+      .valagala {
+        margin-bottom: -10px;
+      }
+      .top-star i {
+        font-size: 33px;
+        color: #370941;
+        opacity: 0.6;
+        position: fixed;
+        bottom: 30px;
+        right: 30px;
+        z-index: 4;
+      }
+      footer {
+        z-index: 3;
+        text-align: center;
+        margin-top: 20px;
+        margin-bottom: 30px;
+        font-family: monospace;
+        opacity: 0.7;
+        letter-spacing: 2px;
+      }
+
+      @media (max-width: 900px) {
+        .background-img {
+          position: absolute;
+          z-index: 0;
+          background-size: cover;
+          background-position: center;
+          height: 100vh;
+          width: 100%;
+        }
+
+        .overlay {
+          position: relative;
+          margin-top: 550px;
+          top: 0;
+          left: 0;
+          transform: none;
+          z-index: 1;
+          overflow-y: auto;
+        }
+
+        .title {
+          position: relative;
+          top: -60px;
+        }
+        .icon {
+          font-size: 70px;
+          letter-spacing: 4px;
+          margin-left: 180px;
+        }
+
+        h1 {
+          font-size: 120px;
+          letter-spacing: 4px;
+          padding: 10px;
+          margin-left: 0;
+        }
+
+        h2 {
+          margin-right: 10px;
+          font-size: 20px;
+          letter-spacing: 2px;
+        }
+        @keyframes outer-left {
+          from {
+            transform: translateX(90%);
+          }
+          to {
+            transform: none;
+          }
+        }
+        h3 {
+          margin-top: -40px;
+          margin-bottom: -280px;
+          font-size: 14px;
+          letter-spacing: 1px;
+        }
+
+        .spotify {
+          margin-right: auto;
+          width: 75%;
+        }
+
+        p {
+          padding: 20px;
+          font-size: 14px;
+        }
+        .brown {
+          margin-left: 15px;
+        }
+        .brown,
+        .brown-two {
+          font-size: 60px;
+          letter-spacing: 30px;
+        }
+        .james {
+          font-size: 80px;
+          letter-spacing: 50px;
+        }
+        .hardest-working {
+          font-size: 20px;
+          letter-spacing: 2px;
+        }
+        .giphy-embed {
+          width: 380px;
+          height: 320px;
+        }
+        .container {
+          grid-template-columns: 1fr;
+          grid-gap: 20px;
+        }
+      }
+
+      @media (max-width: 500px) {
+        .background-img {
+          position: absolute;
+          z-index: 0;
+          background-size: cover;
+          background-position: center;
+          height: 100vh;
+          width: 100%;
+        }
+
+        .overlay {
+          position: relative;
+          margin-top: 500px;
+          top: 0;
+          left: 0;
+          transform: none;
+          z-index: 1;
+          overflow-y: auto;
+        }
+
+        .title {
+          position: relative;
+          top: -60px;
+        }
+        .icon {
+          font-size: 70px;
+          letter-spacing: 4px;
+          margin-left: 80px;
+        }
+
+        h1 {
+          font-size: 60px;
+          letter-spacing: 4px;
+          padding: 10px;
+          margin-left: 0;
+        }
+
+        h2 {
+          margin-right: 10px;
+          font-size: 20px;
+          letter-spacing: 2px;
+        }
+        @keyframes outer-left {
+          from {
+            transform: translateX(90%);
+          }
+          to {
+            transform: none;
+          }
+        }
+        h3 {
+          margin-top: -40px;
+          margin-bottom: -280px;
+          font-size: 14px;
+          letter-spacing: 1px;
+        }
+
+        .spotify {
+          margin-left: 20px;
+          width: 90%;
+        }
+
+        p {
+          padding: 20px;
+          font-size: 14px;
+        }
+        .brown {
+          margin-left: 15px;
+        }
+        .brown,
+        .brown-two {
+          font-size: 60px;
+          letter-spacing: 30px;
+        }
+        .james {
+          font-size: 80px;
+          letter-spacing: 30px;
+        }
+        .hardest-working {
+          font-size: 20px;
+          letter-spacing: 2px;
+        }
+
+        .container {
+          grid-template-columns: 1fr;
+          grid-gap: 20px;
+        }
+        .giphy-embed {
+          width: 250px;
+          height: 200px;
+        }
+      }
+      @media (max-width: 400px) {
+        .background-img {
+          position: absolute;
+          z-index: 0;
+          background-size: cover;
+          background-position: center;
+          height: 100vh;
+          width: 100%;
+        }
+
+        .overlay {
+          position: relative;
+          margin-top: 412px;
+          top: 0;
+          left: 0;
+          transform: none;
+          z-index: 1;
+          overflow-y: auto;
+        }
+
+        .title {
+          position: relative;
+          top: -120px;
+        }
+        .icon {
+          font-size: 70px;
+          letter-spacing: 4px;
+          margin-left: 80px;
+        }
+
+        h1 {
+          font-size: 50px;
+          letter-spacing: 4px;
+          padding: 10px;
+          margin-left: 0;
+        }
+
+        h2 {
+          margin-right: 10px;
+          font-size: 20px;
+          letter-spacing: 2px;
+        }
+        @keyframes outer-left {
+          from {
+            transform: translateX(90%);
+          }
+          to {
+            transform: none;
+          }
+        }
+        h3 {
+          margin-top: -40px;
+          margin-bottom: -280px;
+          font-size: 12px;
+          letter-spacing: 1px;
+        }
+
+        .spotify {
+          margin-left: 20px;
+          width: 90%;
+        }
+
+        p {
+          padding: 20px;
+          font-size: 14px;
+        }
+        .brown {
+          margin-left: 15px;
+        }
+        .brown,
+        .brown-two {
+          font-size: 60px;
+          letter-spacing: 30px;
+        }
+        .james {
+          font-size: 80px;
+          letter-spacing: 30px;
+        }
+        .hardest-working {
+          font-size: 20px;
+          letter-spacing: 2px;
+        }
+
+        .container {
+          grid-template-columns: 1fr;
+          grid-gap: 20px;
+        }
+        .giphy-embed {
+          width: 250px;
+          height: 200px;
+        }
+      }
+    </style>
     <title>ICON- JAMES BROWN</title>
   </head>
   <body>
